1 June 2007
+ Added permission check on single comment view.

Version 0.6.3
-------------------------------------------------------------------
+ Added setAnchor to comments. Needs newest version of DBPager.
+ Changed anchor tag to conform with Safari.

Version 0.6.2
-------------------------------------------------------------------
+ Fixed bug with ordering comments by age.

Version 0.6.1
-------------------------------------------------------------------
+ Added comments anchor.
+ Changed numbering method for translation.

Version 0.6.0
-------------------------------------------------------------------
4 April 2007
+ Updated language functions.

5 March 2007
+ Changed control panel icon

Version 0.5.1
--------------------------------------------------------------------
19 February 2007
+ Reduced translate functions.

15 February 2007
+ Added translate functions
+ Removed reference constructors
+ Added anonymous name tag for identification
+ Added forbidden names.
+ Updated files: conf/forbidden.php, conf/config.php

30 January 2007
+ Fixed isPosted check to prevent extra posts

Version 0.5.0
--------------------------------------------------------------------
27 November 2006
+ Updated templates templates/view.tpl, templates/alt_view.tpl
+ Added anchor tag to templates and code.
+ Changed the getSourceUrl function in the Thread to use the DBPager's
  new saveLastView and getLastView functions.
+ Update dependent on new core.

Version 0.4.0
--------------------------------------------------------------------
13 November 2006
+ Updated files : templates/edit.tpl, templates/settings_form.tpl
+ Added a permission for settings control.
+ Added new Captcha class for commenting (dependency on new core)
+ Added selector for captcha control on settings tab

8 November 2006
+ Updated file conf/config.php
+ Added default comment limit and set it to 20.

Version 0.3.0
--------------------------------------------------------------------
7 November 2006