@@ -1,0 +1,10 @@
+<div class="box">
+   <div class="box-title"><h1>{BOX_TITLE}</h1></div>
+   <div class="box-content">
+   <!-- BEGIN comment-row -->
+   <ul class="smaller">
+   <li>{TITLE} - {AUTHOR} ({DATE})</li>
+   </ul>
+   <!-- END comment-row -->
+   </div>
+</div>
